Bug: PRD Reviewer: Jay Wootton Comment: In ActivityStreamUIEntry, added the ability to expand/collapse the description by clicking on the description of the expand/collapse image.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -274,10 +274,8 @@
 {
 	color: #333333;
 	font-size: 12px;
-	height: 2em;
 	margin-top: 4px;
 	margin-left: 1px;
-	overflow: hidden;
 	position: relative;
 }
 
@@ -349,6 +347,7 @@
 {
 	font-size: 12px;
 	margin-left: 35px;
+	position: relative;
 	white-space: normal;
 }
 
@@ -357,6 +356,7 @@
 	font-size: 13px;
 	margin-top: 5px;
 	margin-left: 55px;
+	position: relative;
 	white-space: normal;
 }
 
@@ -472,6 +472,13 @@
 	font-size: 12px;
 	margin-right: 3px;
 	padding: 2px 10px;
+}
+
+.activityStreamExpandDescImg, .activityStreamCollapseDescImg
+{
+	cursor: pointer;
+	left: -20px;
+	position: absolute;
 }
 
 .shareThisRecipientTablePanel
